manifests/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: hello-k8s
    labels:
      app: hello-k8s
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: hello-k8s
    template:
      metadata:
        name: hello-k8s
        labels:
          app: hello-k8s
      spec:
        containers:
          - name: hello-k8s
            image: ghcr.io/yaon-c2h8n2/hello-k8s:latest
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 8080
                protocol: TCP
            resources:
              requests:
                memory: "400Mi"
                cpu: "250m"
        restartPolicy: Always
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              - topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchLabels:
                    app: hello-k8s
